--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-send-intent",
-  "version": "1.3.0",
-  "description": "React Native Android module to use Android's Intent actions for send sms, text to shareable apps, open custom apps, make phone calls and etc",
+  "version": "0.0.1",
+  "description": "Fork of lucasferreira/react-native-send-intent. Improved `openAppWithUri` method for better compatibility with Firebase Dynamic Links and enhanced intent resolutions.",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
@@ -34,3 +34,4 @@
     "react-native": "*"
   }
 }
+
